minor bug fixes

--- a/src/main/webapp/template/head.xhtml
+++ b/src/main/webapp/template/head.xhtml
@@ -6,7 +6,7 @@
       
       <ui:composition>
       	<f:facet name="first">
-      		
+      		<h:outputStylesheet name="css/main.css" />
 		</f:facet>
       </ui:composition>
 </html>
