datatable row names changed.

--- a/src/main/webapp/views/index.xhtml
+++ b/src/main/webapp/views/index.xhtml
@@ -127,16 +127,16 @@
       					<p:panelGrid rendered="#{mainController.activeTab == 1 or mainController.activeTab == 5}">
       						<p:outputLabel value="TCMB" rendered="#{index == 0}"/>
       						<p:outputLabel value="Şekerbank" rendered="#{index == 1}"/>
-      						<p:outputLabel value="250-251" rendered="#{index == 2}"/>
+      						<p:outputLabel value="250-251 R.Kodu" rendered="#{index == 2}"/>
       					</p:panelGrid>
       					<p:panelGrid rendered="#{mainController.activeTab == 2 or mainController.activeTab == 6}">
-      						<p:outputLabel value="Limit" rendered="#{index == 0}"/>
-      						<p:outputLabel value="Risk" rendered="#{index == 1}"/>
+      						<p:outputLabel value="Toplam Limit" rendered="#{index == 0}"/>
+      						<p:outputLabel value="Toplam Risk" rendered="#{index == 1}"/>
       					</p:panelGrid>
       					<p:panelGrid rendered="#{mainController.activeTab == 3 or mainController.activeTab == 7}">
-      						<p:outputLabel value="0-12" rendered="#{index == 0}"/>
-      						<p:outputLabel value="12-24" rendered="#{index == 1}"/>
-      						<p:outputLabel value="24+" rendered="#{index == 2}"/>
+      						<p:outputLabel value="0-12 vade" rendered="#{index == 0}"/>
+      						<p:outputLabel value="12-24 vade" rendered="#{index == 1}"/>
+      						<p:outputLabel value="24+ vade" rendered="#{index == 2}"/>
       					</p:panelGrid>
       					<p:panelGrid rendered="#{mainController.activeTab == 4}">
       						<p:outputLabel value="Factory" rendered="#{index == 0}"/>
