Performance page added, chartes created.

--- a/src/main/webapp/template/head.xhtml
+++ b/src/main/webapp/template/head.xhtml
@@ -5,6 +5,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
       
       <ui:composition>
+      	<title>Charter</title>
       	<f:facet name="first">
       		<h:outputStylesheet name="css/main.css" />
 		</f:facet>
