export chart from client to server succeed!

--- a/src/main/webapp/template/head.xhtml
+++ b/src/main/webapp/template/head.xhtml
@@ -9,5 +9,8 @@
       	<f:facet name="first">
       		<h:outputStylesheet name="css/main.css" />
 		</f:facet>
+		<f:facet name="middle">
+			<h:outputScript name="js/main.js"/>
+		</f:facet>
       </ui:composition>
 </html>
