--- a/src/main/webapp/views/performance.xhtml
+++ b/src/main/webapp/views/performance.xhtml
@@ -8,7 +8,7 @@
 	<ui:define name="menuitem">
 		<h:form id="performanceForm">
 			<p:dataTable id="performanceTable" widgetVar="performanceTable" emptyMessage="Hiç kayıt bulunmamaktadır."
-				resizableColumns="false" style="text-align:center" paginator="true" rows="20" styleClass="paginated" 
+				resizableColumns="false" paginator="true" rows="20" styleClass="paginated" 
 				paginatorPosition="top" paginatorAlwaysVisible="false" rowsPerPageTemplate="20,50,100" 
 				value="#{performanceController.performance.jobRecords}" var="record">
 			
@@ -27,7 +27,7 @@
 				<p:column headerText="Çalışan" style="width:10%" filterBy="#{record.personel}" filterMatchMode="contains">
 					<p:outputLabel value="#{record.personel}"/>
 				</p:column>
-				<p:column headerText="Firma" style="width:10%" filterBy="#{record.firm}" filterMatchMode="contains">
+				<p:column headerText="Firma" style="width:24%" filterBy="#{record.firm}" filterMatchMode="contains">
 					<p:outputLabel value="#{record.firm}"/>
 				</p:column>
 				<p:column headerText="Grup" style="width:10%" filterBy="#{record.group}" filterMatchMode="contains">
@@ -47,11 +47,11 @@
 				<p:column headerText="Talep Eden" style="width:10%" filterBy="#{record.requester}" filterMatchMode="contains">
 					<p:outputLabel value="#{record.requester}"/>
 				</p:column>
-				<p:column headerText="Gün Farkı" style="width:10%">
+				<p:column headerText="Gün Farkı" style="width:8%">
 					<p:outputLabel value="#{record.dayDiff}"/>
 				</p:column>
-				<p:column headerText="Açıklama" style="width:20%" filterBy="#{record.desc}" filterMatchMode="contains">
-					<p:outputLabel value="#{record.desc}"/>
+				<p:column headerText="İşlem Türü" style="width:8%" filterBy="#{record.type}" filterMatchMode="contains">
+					<p:outputLabel value="#{record.type}"/>
 				</p:column>
 			</p:dataTable>
 		</h:form>
@@ -86,12 +86,13 @@
       					<p:dataTable id="personelTable" value="#{performanceController.personelData}" var="data"
 							resizableColumns="true" rowIndexVar="index">
 						
-							<p:column headerText="Tip" style="font-size:12px">
+							<p:column headerText="Tip" style="font-size:12px;font-weight:bold;">
 								<p:outputLabel value="Rapor" rendered="#{index == 0}"/>
-								<p:outputLabel value="Memzuç" rendered="#{index == 1}"/>
-								<p:outputLabel value="Toplam" rendered="#{index == 2}"/>
+								<p:outputLabel value="Çek" rendered="#{index == 1}"/>
+								<p:outputLabel value="Memzuç" rendered="#{index == 2}"/>
+								<p:outputLabel value="Toplam" rendered="#{index == 3}"/>
 							</p:column>
-							<p:columns value="#{performanceController.performance.personels}" var="personel" style="font-size:12px">
+							<p:columns value="#{performanceController.performance.personels}" var="personel" style="font-size:12px;text-align:center">
 								<f:facet name="header">
 									<p:outputLabel value="#{personel}"/>
 								</f:facet>
@@ -105,7 +106,7 @@
 						<p:dataTable id="departmentTable" value="#{performanceController.departmentData}" var="data"
 							resizableColumns="true" rowIndexVar="index">
 							
-							<p:columns value="#{performanceController.departmentColumns}" var="label" style="font-size:12px">
+							<p:columns value="#{performanceController.departmentColumns}" var="label" style="font-size:12px;text-align:center">
 								<f:facet name="header">
 									<p:outputLabel value="#{label}"/>
 								</f:facet>
